Better configuration page

--- a/src/main/resources/assets/mwc/lang/de_DE.lang
+++ b/src/main/resources/assets/mwc/lang/de_DE.lang
@@ -1072,47 +1072,47 @@ gui.grenadeExplodes=Explodiert in T-%s Sekunden
 gui.coolingDown=Kühlt ab...
 
 config.category.ores.name=Erze
-config.ores.sulfurSpawnsPerChunk.property.name=Schwefelerz pro Chunk
-config.ores.sulfurSpawnsPerChunk.property.tooltip=Die Menge an generiertem Schwefelerz pro Chunk.
-config.ores.copperSpawnsPerChunk.property.name=Kupfererz Per Chunk
-config.ores.copperSpawnsPerChunk.property.tooltip=Die Menge an generiertem Kupfererz pro Chunk.
-config.ores.tinSpawnsPerChunk.property.name=Zinnerz pro Chunk
-config.ores.tinSpawnsPerChunk.property.tooltip=Die Menge an generiertem Zinnerz pro Chunk.
-config.ores.leadSpawnsPerChunk.property.name=Bleierz pro Chunk
-config.ores.leadSpawnsPerChunk.property.tooltip=Die Menge an generiertem Bleierz pro Chunk.
-config.ores.graphiteSpawnsPerChunk.property.name=Graphiterz pro Chunk
-config.ores.graphiteSpawnsPerChunk.property.tooltip=Die Menge an generiertem Graphiterz pro Chunk.
+config.server.ores.sulfurSpawnsPerChunk.property.name=Schwefelerz pro Chunk
+config.server.ores.sulfurSpawnsPerChunk.property.tooltip=Die Menge an generiertem Schwefelerz pro Chunk.
+config.server.ores.copperSpawnsPerChunk.property.name=Kupfererz Per Chunk
+config.server.ores.copperSpawnsPerChunk.property.tooltip=Die Menge an generiertem Kupfererz pro Chunk.
+config.server.ores.tinSpawnsPerChunk.property.name=Zinnerz pro Chunk
+config.server.ores.tinSpawnsPerChunk.property.tooltip=Die Menge an generiertem Zinnerz pro Chunk.
+config.server.ores.leadSpawnsPerChunk.property.name=Bleierz pro Chunk
+config.server.ores.leadSpawnsPerChunk.property.tooltip=Die Menge an generiertem Bleierz pro Chunk.
+config.server.ores.graphiteSpawnsPerChunk.property.name=Graphiterz pro Chunk
+config.server.ores.graphiteSpawnsPerChunk.property.tooltip=Die Menge an generiertem Graphiterz pro Chunk.
 
 config.category.gameplay.name=Gameplay
-config.gameplay.enableAmmoCounter.property.name=Munitionszähler
-config.gameplay.enableAmmoCounter.property.tooltip=Den Munitionszähler ein-/ausschalten
-config.gameplay.ammoCounterX.property.name=Munitionszähler X
-config.gameplay.ammoCounterY.property.name=Munitionszähler Y
-config.gameplay.ammoCounterSize.property.name=Munitionszählergröße
-config.gameplay.enableOpenDoorDisplay.property.name=Türoffenheitsanzeige
-config.gameplay.enableAmmoCounterBackground.property.name=Munitionszählerhintergrund
-config.gameplay.enableAmmoCounterBackgroundReverse.property.name=Munitionszählerumkehrung
-config.gameplay.enableOpenDoorDisplay.property.tooltip=Die Türoffenheitsanzeige ein-/ausschalten
-config.gameplay.holdToAim.property.name=Zum Zielen halten
-config.gameplay.holdToAim.property.tooltip=Zum-Zielen-halten ein-/ausschalten
-config.gameplay.enableAmmoCounterBackground.property.tooltip=Munitionszählerhintergrund ein-/ausschalten
-config.gameplay.enableBleedingOnHit.property.name=Durch Treffer bluten
-config.gameplay.enableBleedingOnHit.property.tooltip=Durch-Treffer-bluten ein-/ausschalten
-config.gameplay.bulletBreakGlass.property.name=Geschoss zerstört Glas
-config.gameplay.bulletBreakGlass.property.tooltip=Geschoss zerstören Glas ein-/ausschalten
-config.gameplay.penetrableBlocks.property.name=Durchdringbare Blöcke
-config.gameplay.knockbackOnHit.property.name=Knockback bei Treffern
-config.gameplay.enableMuzzleEffects.property.name=Laufmündungseffekte
-config.gameplay.enableMuzzleEffects.property.tooltip=Laufmündungseffekte ein-/ausschalten
-config.gameplay.enableBlurOnAim.property.name=Zielen trübt den Hintergrund
-config.gameplay.enableBlurOnAim.property.tooltip=Zielen-trübt-den-Hintergrund ein-/ausschalten
-config.gameplay.explosionBreak.property.name=Explosionszerstörung
-config.gameplay.explosionDamage.property.name=Explosionsschaden
-config.gameplay.explosionDamage.property.tooltip=Den Explosionsschaden einstellen
-config.gameplay.explodedBlockDropChance.property.name=Gesprengter Block Dropwahrscheinlichkeit
-config.gameplay.explodedBlockDropChance.property.tooltip=Die Wahrscheinlichkeot dass ein gesprengter Block droppt.
-config.gameplay.statusBarPosition.property.name=Statusleistenposition
-config.gameplay.statusBarPosition.property.tooltip=The Bildschirmposition für die Statusleiste
+config.client.ammocounter.enableAmmoCounter.property.name=Munitionszähler
+config.client.ammocounter.enableAmmoCounter.property.tooltip=Den Munitionszähler ein-/ausschalten
+config.client.ammocounter.ammoCounterX.property.name=Munitionszähler X
+config.client.ammocounter.ammoCounterY.property.name=Munitionszähler Y
+config.client.ammocounter.ammoCounterSize.property.name=Munitionszählergröße
+config.client.enableOpenDoorDisplay.property.name=Türoffenheitsanzeige
+config.client.ammocounter.enableAmmoCounterBackground.property.name=Munitionszählerhintergrund
+config.client.ammocounter.enableAmmoCounterBackgroundReverse.property.name=Munitionszählerumkehrung
+config.client.enableOpenDoorDisplay.property.tooltip=Die Türoffenheitsanzeige ein-/ausschalten
+config.client.holdToAim.property.name=Zum Zielen halten
+config.client.holdToAim.property.tooltip=Zum-Zielen-halten ein-/ausschalten
+config.client.ammocounter.enableAmmoCounterBackground.property.tooltip=Munitionszählerhintergrund ein-/ausschalten
+config.server.enableBleedingOnHit.property.name=Durch Treffer bluten
+config.server.enableBleedingOnHit.property.tooltip=Durch-Treffer-bluten ein-/ausschalten
+config.server.bulletBreakGlass.property.name=Geschoss zerstört Glas
+config.server.bulletBreakGlass.property.tooltip=Geschoss zerstören Glas ein-/ausschalten
+config.client.penetrableBlocks.property.name=Durchdringbare Blöcke
+config.client.knockbackOnHit.property.name=Knockback bei Treffern
+config.client.enableMuzzleEffects.property.name=Laufmündungseffekte
+config.client.enableMuzzleEffects.property.tooltip=Laufmündungseffekte ein-/ausschalten
+config.client.enableBlurOnAim.property.name=Zielen trübt den Hintergrund
+config.client.enableBlurOnAim.property.tooltip=Zielen-trübt-den-Hintergrund ein-/ausschalten
+config.client.explosionBreak.property.name=Explosionszerstörung
+config.server.explosionDamage.property.name=Explosionsschaden
+config.server.explosionDamage.property.tooltip=Den Explosionsschaden einstellen
+config.server.explodedBlockDropChance.property.name=Gesprengter Block Dropwahrscheinlichkeit
+config.server.explodedBlockDropChance.property.tooltip=Die Wahrscheinlichkeot dass ein gesprengter Block droppt.
+config.client.statusBarPosition.property.name=Statusleistenposition
+config.client.statusBarPosition.property.tooltip=The Bildschirmposition für die Statusleiste
 
 config.category.entities.name=Entitäten
 config.entities.terroristHealth.property.name=Terroristengesundheitspunkte
@@ -1125,34 +1125,34 @@ config.category.rendering.name=Rendering
 config.category.rendering.tooltip=Rendering/Shaders
 config.category.screenshaders.name=Bildschirmshader
 config.category.screenshaders.tooltip=Bildschirmshader
-config.rendering.enableAllShaders.property.name=Alle Shader einschalten
-config.rendering.enableAllShaders.property.tooltip=Alle Shader einschalten
-config.rendering.enableScreenShaders.property.name=Bildschirmshader einschalten
-config.rendering.enableScreenShaders.property.tooltip=Bildschirmshader einschalten
-config.rendering.enableWorldShaders.property.name=Weltenshader einschalten
-config.rendering.enableWorldShaders.property.tooltip=Weltenshader einschalten
-config.rendering.enableGunShaders.property.name=Waffenshader einschalten
-config.rendering.enableGunShaders.property.tooltip=Waffenshader einschalten
-config.rendering.enableFlashShaders.property.name=Blitzshader einschalten
-config.rendering.enableFlashShaders.property.tooltip=Blitzshader einschalten
-config.rendering.enableReticleShaders.property.name=Fadenkreuzshader einschalten
-config.rendering.enableReticleShaders.property.tooltip=Fadenkreuzshader einschalten
-config.rendering.enableHDRFramebuffer.property.name=HDR Framebuffer einschalten
-config.rendering.enableHDRFramebuffer.property.tooltip=HDR Framebuffer aktivieren
-config.rendering.enableScopeEffects.property.name=Zielfernrohreffekte aktivieren
-config.rendering.enableScopeEffects.property.tooltip=Zielfernrohreffekte aktivieren
-config.rendering.screenshaders.bloomEffect.property.name=Bloom einschalten
-config.rendering.screenshaders.bloomEffect.property.tooltip=Bloom einschalten
-config.rendering.screenshaders.filmGrain.property.name=Enable Film Grain
-config.rendering.screenshaders.filmGrain.property.tooltip=Enable Film Grain
-config.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensität
-config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensität
-config.rendering.screenshaders.bloomLayers.property.name=Menge an Bloom-Schichten
-config.rendering.screenshaders.bloomLayers.property.tooltip=Menge an Bloom-Schichten
-config.rendering.screenshaders.onScreenRainAndSnow.property.name=Sichtbarer Regen und Schnee
-config.rendering.screenshaders.onScreenRainAndSnow.property.tooltip=Regen- und Schneeeffekte dem Bildschirm hinzufügen
-config.rendering.enableFancyRainAndSnow.property.name=Schicker Schnee und Regen
-config.rendering.enableFancyRainAndSnow.property.tooltip=Ersetzt Minecrafts Schnee- und Regenrendering mit einer schickeren Variante
+config.client.rendering.enableAllShaders.property.name=Alle Shader einschalten
+config.client.rendering.enableAllShaders.property.tooltip=Alle Shader einschalten
+config.client.rendering.enableScreenShaders.property.name=Bildschirmshader einschalten
+config.client.rendering.enableScreenShaders.property.tooltip=Bildschirmshader einschalten
+config.client.rendering.enableWorldShaders.property.name=Weltenshader einschalten
+config.client.rendering.enableWorldShaders.property.tooltip=Weltenshader einschalten
+config.client.rendering.enableGunShaders.property.name=Waffenshader einschalten
+config.client.rendering.enableGunShaders.property.tooltip=Waffenshader einschalten
+config.client.rendering.enableFlashShaders.property.name=Blitzshader einschalten
+config.client.rendering.enableFlashShaders.property.tooltip=Blitzshader einschalten
+config.client.rendering.enableReticleShaders.property.name=Fadenkreuzshader einschalten
+config.client.rendering.enableReticleShaders.property.tooltip=Fadenkreuzshader einschalten
+config.client.rendering.enableHDRFramebuffer.property.name=HDR Framebuffer einschalten
+config.client.rendering.enableHDRFramebuffer.property.tooltip=HDR Framebuffer aktivieren
+config.client.rendering.enableScopeEffects.property.name=Zielfernrohreffekte aktivieren
+config.client.rendering.enableScopeEffects.property.tooltip=Zielfernrohreffekte aktivieren
+config.client.rendering.screenshaders.bloomEffect.property.name=Bloom einschalten
+config.client.rendering.screenshaders.bloomEffect.property.tooltip=Bloom einschalten
+config.client.rendering.screenshaders.filmGrain.property.name=Enable Film Grain
+config.client.rendering.screenshaders.filmGrain.property.tooltip=Enable Film Grain
+config.client.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensität
+config.client.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensität
+config.client.rendering.screenshaders.bloomLayers.property.name=Menge an Bloom-Schichten
+config.client.rendering.screenshaders.bloomLayers.property.tooltip=Menge an Bloom-Schichten
+config.client.rendering.screenshaders.onScreenRainAndSnow.property.name=Sichtbarer Regen und Schnee
+config.client.rendering.screenshaders.onScreenRainAndSnow.property.tooltip=Regen- und Schneeeffekte dem Bildschirm hinzufügen
+config.client.rendering.enableFancyRainAndSnow.property.name=Schicker Schnee und Regen
+config.client.rendering.enableFancyRainAndSnow.property.tooltip=Ersetzt Minecrafts Schnee- und Regenrendering mit einer schickeren Variante
 
 overlay.opendoor.name=Tür öffnen
 
