--- a/src/main/resources/assets/mwc/lang/es_ES.lang
+++ b/src/main/resources/assets/mwc/lang/es_ES.lang
@@ -1059,40 +1059,40 @@ gui.currentZoom=Zoom: %s%%
 gui.coolingDown=Cooling down...
 
 config.category.ores.name=Configuración de minerales
-config.ores.sulfurSpawnsPerChunk.property.name=Mineral de azufre por Chunk.
-config.ores.sulfurSpawnsPerChunk.property.tooltip=La cantidad de mineral de azufre generado por Chunk.
-config.ores.copperSpawnsPerChunk.property.name=Mineral de cobre por Chunk.
-config.ores.copperSpawnsPerChunk.property.tooltip=La cantidad de mineral de cobre generado por chunk.
-config.ores.tinSpawnsPerChunk.property.name=Mineral de estaño por Chunk
-config.ores.tinSpawnsPerChunk.property.tooltip=La cantidad de mineral de estaño generada por chunk.
-config.ores.leadSpawnsPerChunk.property.name=Mineral de plomo por Chunk
-config.ores.leadSpawnsPerChunk.property.tooltip=La cantidad de mineral de plomo generada por chunk.
-config.ores.graphiteSpawnsPerChunk.property.name=Mineral de grafito por Chunk
-config.ores.graphiteSpawnsPerChunk.property.tooltip=La cantidad de mineral de grafito generado por chunk.
+config.server.ores.sulfurSpawnsPerChunk.property.name=Mineral de azufre por Chunk.
+config.server.ores.sulfurSpawnsPerChunk.property.tooltip=La cantidad de mineral de azufre generado por Chunk.
+config.server.ores.copperSpawnsPerChunk.property.name=Mineral de cobre por Chunk.
+config.server.ores.copperSpawnsPerChunk.property.tooltip=La cantidad de mineral de cobre generado por chunk.
+config.server.ores.tinSpawnsPerChunk.property.name=Mineral de estaño por Chunk
+config.server.ores.tinSpawnsPerChunk.property.tooltip=La cantidad de mineral de estaño generada por chunk.
+config.server.ores.leadSpawnsPerChunk.property.name=Mineral de plomo por Chunk
+config.server.ores.leadSpawnsPerChunk.property.tooltip=La cantidad de mineral de plomo generada por chunk.
+config.server.ores.graphiteSpawnsPerChunk.property.name=Mineral de grafito por Chunk
+config.server.ores.graphiteSpawnsPerChunk.property.tooltip=La cantidad de mineral de grafito generado por chunk.
 
 config.category.gameplay.name=Configuración de mod
-config.gameplay.enableAmmoCounter.property.name=Contador de municiones
-config.gameplay.enableAmmoCounter.property.tooltip=Habilitar/deshabilitar el contador de munición
-config.gameplay.enableOpenDoorDisplay.property.name=Visualizador de abrir puerta
-config.gameplay.enableOpenDoorDisplay.property.tooltip=Habilitar/deshabilitar la visualizador de abrir puerta
-config.gameplay.holdToAim.property.name=Mantener para apuntar
-config.gameplay.holdToAim.property.tooltip=Habilitar/deshabilitar mantener para apuntar
-config.gameplay.enableAmmoCounterBackground.property.name=Fondo de contador de munición
-config.gameplay.enableAmmoCounterBackground.property.tooltip=Habilitar/deshabilitar el fondo para el contador de munición
-config.gameplay.enableBleedingOnHit.property.name=Bleeding On Hit
-config.gameplay.enableBleedingOnHit.property.tooltip=Enable/Disable bleeding on hit
-config.gameplay.bulletBreakGlass.property.name=Vidrio roto por bala
-config.gameplay.bulletBreakGlass.property.tooltip=Habilitar/deshabilitar el vidrio roto por bala
-config.gameplay.enableMuzzleEffects.property.name=Efectos de bozal
-config.gameplay.enableMuzzleEffects.property.tooltip=Habilitar/deshabilitar los efectos de bozal
-config.gameplay.enableBlurOnAim.property.name=Desenfoque al apuntar
-config.gameplay.enableBlurOnAim.property.tooltip=Habilitar/deshabilitar el desenfoque al apuntar
-config.gameplay.explosionDamage.property.name=Daños por explosión
-config.gameplay.explosionDamage.property.tooltip=Personaliza el daño de la explosión.
-config.gameplay.explodedBlockDropChance.property.name=Probabilidad de caída de bloque explotado
-config.gameplay.explodedBlockDropChance.property.tooltip=La posibilidad de que los bloques caigan cuando explotan
-config.gameplay.statusBarPosition.property.name=Status Bar Position
-config.gameplay.statusBarPosition.property.tooltip=The screen position for the Status Bar
+config.client.ammocounter.enableAmmoCounter.property.name=Contador de municiones
+config.client.ammocounter.enableAmmoCounter.property.tooltip=Habilitar/deshabilitar el contador de munición
+config.client.enableOpenDoorDisplay.property.name=Visualizador de abrir puerta
+config.client.enableOpenDoorDisplay.property.tooltip=Habilitar/deshabilitar la visualizador de abrir puerta
+config.client.holdToAim.property.name=Mantener para apuntar
+config.client.holdToAim.property.tooltip=Habilitar/deshabilitar mantener para apuntar
+config.client.ammocounter.enableAmmoCounterBackground.property.name=Fondo de contador de munición
+config.client.ammocounter.enableAmmoCounterBackground.property.tooltip=Habilitar/deshabilitar el fondo para el contador de munición
+config.server.enableBleedingOnHit.property.name=Bleeding On Hit
+config.server.enableBleedingOnHit.property.tooltip=Enable/Disable bleeding on hit
+config.server.bulletBreakGlass.property.name=Vidrio roto por bala
+config.server.bulletBreakGlass.property.tooltip=Habilitar/deshabilitar el vidrio roto por bala
+config.client.enableMuzzleEffects.property.name=Efectos de bozal
+config.client.enableMuzzleEffects.property.tooltip=Habilitar/deshabilitar los efectos de bozal
+config.client.enableBlurOnAim.property.name=Desenfoque al apuntar
+config.client.enableBlurOnAim.property.tooltip=Habilitar/deshabilitar el desenfoque al apuntar
+config.server.explosionDamage.property.name=Daños por explosión
+config.server.explosionDamage.property.tooltip=Personaliza el daño de la explosión.
+config.server.explodedBlockDropChance.property.name=Probabilidad de caída de bloque explotado
+config.server.explodedBlockDropChance.property.tooltip=La posibilidad de que los bloques caigan cuando explotan
+config.client.statusBarPosition.property.name=Status Bar Position
+config.client.statusBarPosition.property.tooltip=The screen position for the Status Bar
 
 config.category.entities.name=Configuración de entidades
 
@@ -1100,31 +1100,31 @@ config.category.rendering.name=Renderizado
 config.category.rendering.tooltip=Rendering/Shaders
 config.category.screenshaders.name=Sombreadores de pantalla
 config.category.screenshaders.tooltip=Sombreadores de pantalla
-config.rendering.enableAllShaders.property.name=Habilitar todos los sombreadores
-config.rendering.enableAllShaders.property.tooltip=Habilitar todos los sombreadores
-config.rendering.enableScreenShaders.property.name=Deshabilitar sombreadores de pantalla
-config.rendering.enableScreenShaders.property.tooltip=Deshabilitar sombreadores de pantalla
-config.rendering.enableWorldShaders.property.name=Deshabilitar sombreadores del mundo
-config.rendering.enableWorldShaders.property.tooltip=Deshabilitar sombreadores del mundo
-config.rendering.enableGunShaders.property.name=Habilitar sombreadores de armas
-config.rendering.enableGunShaders.property.tooltip=Habilitar sombreadores de armas
-config.rendering.enableFlashShaders.property.name=Habilitar sombreadores de Flash
-config.rendering.enableFlashShaders.property.tooltip=Habilitar sombreadores de Flash
-config.rendering.enableReticleShaders.property.name=Habilitar sombreadores de retícula
-config.rendering.enableReticleShaders.property.tooltip=Habilitar sombreadores de retícula
-config.rendering.enableHDRFramebuffer.property.name=Habilitar el búfer de fotogramas HDR
-config.rendering.enableHDRFramebuffer.property.tooltip=Habilitar el búfer de fotogramas HDR
-config.rendering.enableScopeEffects.property.name=Habilitar efectos de mira alcance
-config.rendering.enableScopeEffects.property.tooltip=Habilitar efectos de mira alcance
-config.rendering.screenshaders.bloomEffect.property.name=Habilitar floración
-config.rendering.screenshaders.bloomEffect.property.tooltip=Habilitar floración
-config.rendering.screenshaders.filmGrain.property.name=Habilitar Film Grain
-config.rendering.screenshaders.filmGrain.property.tooltip=Habilitar Film Grain
-config.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensidad
-config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensidad
-config.rendering.screenshaders.bloomLayers.property.name=Cantidad de capas de floración
-config.rendering.screenshaders.bloomLayers.property.tooltip=Cantidad de capas de floración
-config.rendering.enableFancyRainAndSnow.property.name=Lluvia y nieve-Activado
-config.rendering.enableFancyRainAndSnow.property.tooltip=Please keep this setting DISABLED as it is currently broken.
+config.client.rendering.enableAllShaders.property.name=Habilitar todos los sombreadores
+config.client.rendering.enableAllShaders.property.tooltip=Habilitar todos los sombreadores
+config.client.rendering.enableScreenShaders.property.name=Deshabilitar sombreadores de pantalla
+config.client.rendering.enableScreenShaders.property.tooltip=Deshabilitar sombreadores de pantalla
+config.client.rendering.enableWorldShaders.property.name=Deshabilitar sombreadores del mundo
+config.client.rendering.enableWorldShaders.property.tooltip=Deshabilitar sombreadores del mundo
+config.client.rendering.enableGunShaders.property.name=Habilitar sombreadores de armas
+config.client.rendering.enableGunShaders.property.tooltip=Habilitar sombreadores de armas
+config.client.rendering.enableFlashShaders.property.name=Habilitar sombreadores de Flash
+config.client.rendering.enableFlashShaders.property.tooltip=Habilitar sombreadores de Flash
+config.client.rendering.enableReticleShaders.property.name=Habilitar sombreadores de retícula
+config.client.rendering.enableReticleShaders.property.tooltip=Habilitar sombreadores de retícula
+config.client.rendering.enableHDRFramebuffer.property.name=Habilitar el búfer de fotogramas HDR
+config.client.rendering.enableHDRFramebuffer.property.tooltip=Habilitar el búfer de fotogramas HDR
+config.client.rendering.enableScopeEffects.property.name=Habilitar efectos de mira alcance
+config.client.rendering.enableScopeEffects.property.tooltip=Habilitar efectos de mira alcance
+config.client.rendering.screenshaders.bloomEffect.property.name=Habilitar floración
+config.client.rendering.screenshaders.bloomEffect.property.tooltip=Habilitar floración
+config.client.rendering.screenshaders.filmGrain.property.name=Habilitar Film Grain
+config.client.rendering.screenshaders.filmGrain.property.tooltip=Habilitar Film Grain
+config.client.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensidad
+config.client.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensidad
+config.client.rendering.screenshaders.bloomLayers.property.name=Cantidad de capas de floración
+config.client.rendering.screenshaders.bloomLayers.property.tooltip=Cantidad de capas de floración
+config.client.rendering.enableFancyRainAndSnow.property.name=Lluvia y nieve-Activado
+config.client.rendering.enableFancyRainAndSnow.property.tooltip=Please keep this setting DISABLED as it is currently broken.
 
 overlay.opendoor.name=Abrir puerta
