--- a/src/main/resources/assets/mwc/lang/pt_BR.lang
+++ b/src/main/resources/assets/mwc/lang/pt_BR.lang
@@ -1070,39 +1070,39 @@ gui.currentZoom=Zoom: %s%%
 gui.coolingDown=Cooling down...
 
 config.category.ores.name=Ores Config
-config.ores.sulfurSpawnsPerChunk.property.name=Sulfur Gerado Por Chunk
-config.ores.sulfurSpawnsPerChunk.property.tooltip=Quantidade de Minério de Sulfur Gerado Por Chunk
-config.ores.copperSpawnsPerChunk.property.name=Cobre Gerado Por Chunk
-config.ores.copperSpawnsPerChunk.property.tooltip=Quantidade de Minério de Cobre Gerado Por Chunk
-config.ores.tinSpawnsPerChunk.property.name=Alumínio Gerado Por Chunk
-config.ores.tinSpawnsPerChunk.property.tooltip=Quantidade de Minério de Alumínio Gerado Por Chunk
-config.ores.leadSpawnsPerChunk.property.name=Chumbo Gerado Por Chunk
-config.ores.leadSpawnsPerChunk.property.tooltip=Quantidade de Minério de Chumbo Gerado Por Chunk
-config.ores.graphiteSpawnsPerChunk.property.name=Grafite Gerado Por Chunk
-config.ores.graphiteSpawnsPerChunk.property.tooltip=Quantidade de Minério de Grafite Gerado Por Chunk
+config.server.ores.sulfurSpawnsPerChunk.property.name=Sulfur Gerado Por Chunk
+config.server.ores.sulfurSpawnsPerChunk.property.tooltip=Quantidade de Minério de Sulfur Gerado Por Chunk
+config.server.ores.copperSpawnsPerChunk.property.name=Cobre Gerado Por Chunk
+config.server.ores.copperSpawnsPerChunk.property.tooltip=Quantidade de Minério de Cobre Gerado Por Chunk
+config.server.ores.tinSpawnsPerChunk.property.name=Alumínio Gerado Por Chunk
+config.server.ores.tinSpawnsPerChunk.property.tooltip=Quantidade de Minério de Alumínio Gerado Por Chunk
+config.server.ores.leadSpawnsPerChunk.property.name=Chumbo Gerado Por Chunk
+config.server.ores.leadSpawnsPerChunk.property.tooltip=Quantidade de Minério de Chumbo Gerado Por Chunk
+config.server.ores.graphiteSpawnsPerChunk.property.name=Grafite Gerado Por Chunk
+config.server.ores.graphiteSpawnsPerChunk.property.tooltip=Quantidade de Minério de Grafite Gerado Por Chunk
 config.category.gameplay.name=Configuração de Jogo
-config.gameplay.enableAmmoCounter.property.name=Contador de Munição
-config.gameplay.enableAmmoCounter.property.tooltip=Ativar/Desativar Contador de Munição
-config.gameplay.enableOpenDoorDisplay.property.name=Hud de Abrir Porta
-config.gameplay.enableOpenDoorDisplay.property.tooltip=Ativar/Desativar Hud de Abrir Porta
-config.gameplay.holdToAim.property.name=Segurar Para Mirar
-config.gameplay.holdToAim.property.tooltip=Ativar/Desativar Segurar Para Mirar
-config.gameplay.enableAmmoCounterBackground.property.name=Fundo do Contador de Munição
-config.gameplay.enableAmmoCounterBackground.property.tooltip=Ativar/Desativar Fundo do Contador de Munição
-config.gameplay.enableBleedingOnHit.property.name=Sangramento No Acerto
-config.gameplay.enableBleedingOnHit.property.tooltip=Ativar/Desativar Sangramento No Acerto
-config.gameplay.bulletBreakGlass.property.name=Balas Podem Quebrar Vidros
-config.gameplay.bulletBreakGlass.property.tooltip=Ativar/Desativar Balas Podem Quebrar Vidros
-config.gameplay.enableMuzzleEffects.property.name=Efeitos de Chama do Cano
-config.gameplay.enableMuzzleEffects.property.tooltip=Ativar/Desativar Efeitos de Chama do Cano
-config.gameplay.enableBlurOnAim.property.name=Efeito Blur ao Mirar
-config.gameplay.enableBlurOnAim.property.tooltip=Ativar/Desativar o Blur de Mira
-config.gameplay.explosionDamage.property.name=Dano de Explosão
-config.gameplay.explosionDamage.property.tooltip=Customize o Dano de Explosão
-config.gameplay.explodedBlockDropChance.property.name=Chance de Drops Quando Explodidos
-config.gameplay.explodedBlockDropChance.property.tooltip=Chance de Drop de Blocos Quando Explodidos
-config.gameplay.statusBarPosition.property.name=Posição da Barra de Status
-config.gameplay.statusBarPosition.property.tooltip=Posição de Tela da Barra de Status
+config.client.ammocounter.enableAmmoCounter.property.name=Contador de Munição
+config.client.ammocounter.enableAmmoCounter.property.tooltip=Ativar/Desativar Contador de Munição
+config.client.enableOpenDoorDisplay.property.name=Hud de Abrir Porta
+config.client.enableOpenDoorDisplay.property.tooltip=Ativar/Desativar Hud de Abrir Porta
+config.client.holdToAim.property.name=Segurar Para Mirar
+config.client.holdToAim.property.tooltip=Ativar/Desativar Segurar Para Mirar
+config.client.ammocounter.enableAmmoCounterBackground.property.name=Fundo do Contador de Munição
+config.client.ammocounter.enableAmmoCounterBackground.property.tooltip=Ativar/Desativar Fundo do Contador de Munição
+config.server.enableBleedingOnHit.property.name=Sangramento No Acerto
+config.server.enableBleedingOnHit.property.tooltip=Ativar/Desativar Sangramento No Acerto
+config.server.bulletBreakGlass.property.name=Balas Podem Quebrar Vidros
+config.server.bulletBreakGlass.property.tooltip=Ativar/Desativar Balas Podem Quebrar Vidros
+config.client.enableMuzzleEffects.property.name=Efeitos de Chama do Cano
+config.client.enableMuzzleEffects.property.tooltip=Ativar/Desativar Efeitos de Chama do Cano
+config.client.enableBlurOnAim.property.name=Efeito Blur ao Mirar
+config.client.enableBlurOnAim.property.tooltip=Ativar/Desativar o Blur de Mira
+config.server.explosionDamage.property.name=Dano de Explosão
+config.server.explosionDamage.property.tooltip=Customize o Dano de Explosão
+config.server.explodedBlockDropChance.property.name=Chance de Drops Quando Explodidos
+config.server.explodedBlockDropChance.property.tooltip=Chance de Drop de Blocos Quando Explodidos
+config.client.statusBarPosition.property.name=Posição da Barra de Status
+config.client.statusBarPosition.property.tooltip=Posição de Tela da Barra de Status
 
 config.category.entities.name=Configuração De Entidade
 
@@ -1110,31 +1110,31 @@ config.category.rendering.name=Renderização
 config.category.rendering.tooltip=Renderização/Shaders
 config.category.screenshaders.name=Shaders de Tela
 config.category.screenshaders.tooltip=Shaders de Tela
-config.rendering.enableAllShaders.property.name=Ativar Todos os Shaders
-config.rendering.enableAllShaders.property.tooltip=Ativar Todos os Shaders
-config.rendering.enableScreenShaders.property.name=Desativar Shaders de Tela 
-config.rendering.enableScreenShaders.property.tooltip=Desativar Shaders de Tela 
-config.rendering.enableWorldShaders.property.name=Desativar Shaders do Mundo
-config.rendering.enableWorldShaders.property.tooltip=Desativar Shaders do Mundo
-config.rendering.enableGunShaders.property.name=Ativar Shaders de Armas
-config.rendering.enableGunShaders.property.tooltip=Ativar Shaders de Armas
-config.rendering.enableFlashShaders.property.name=Ativar Shaders De Flash
-config.rendering.enableFlashShaders.property.tooltip=Ativar Shaders De Flash
-config.rendering.enableReticleShaders.property.name=Ativar Shaders de Reticula
-config.rendering.enableReticleShaders.property.tooltip=Ativar Shaders de Reticula
-config.rendering.enableHDRFramebuffer.property.name=Ativar HDR Framebuffer
-config.rendering.enableHDRFramebuffer.property.tooltip=Ativar HDR Framebuffer
-config.rendering.enableScopeEffects.property.name=Ativar Efeitos de Mira 
-config.rendering.enableScopeEffects.property.tooltip=Ativar Efeitos de Mira 
-config.rendering.screenshaders.bloomEffect.property.name=Ativar Bloom
-config.rendering.screenshaders.bloomEffect.property.tooltip=Ativar Bloom
-config.rendering.screenshaders.filmGrain.property.name=Ativar Granulado de Filme
-config.rendering.screenshaders.filmGrain.property.tooltip=Ativar Granulado de Filme
-config.rendering.screenshaders.filmGrainIntensity.property.name=Intensidade do Granulado de Filme 
-config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Intensidade do Granulado de Filme 
-config.rendering.screenshaders.bloomLayers.property.name=Quantidade de Camadas do Efeito Bloom
-config.rendering.screenshaders.bloomLayers.property.tooltip=Quantidade de Camadas do Efeito Bloom
-config.rendering.enableFancyRainAndSnow.property.name=Chuve e Neve na Tela
-config.rendering.enableFancyRainAndSnow.property.tooltip=Por favor mantenha esta configuração DESATIVADA isso está quebrado.
+config.client.rendering.enableAllShaders.property.name=Ativar Todos os Shaders
+config.client.rendering.enableAllShaders.property.tooltip=Ativar Todos os Shaders
+config.client.rendering.enableScreenShaders.property.name=Desativar Shaders de Tela
+config.client.rendering.enableScreenShaders.property.tooltip=Desativar Shaders de Tela
+config.client.rendering.enableWorldShaders.property.name=Desativar Shaders do Mundo
+config.client.rendering.enableWorldShaders.property.tooltip=Desativar Shaders do Mundo
+config.client.rendering.enableGunShaders.property.name=Ativar Shaders de Armas
+config.client.rendering.enableGunShaders.property.tooltip=Ativar Shaders de Armas
+config.client.rendering.enableFlashShaders.property.name=Ativar Shaders De Flash
+config.client.rendering.enableFlashShaders.property.tooltip=Ativar Shaders De Flash
+config.client.rendering.enableReticleShaders.property.name=Ativar Shaders de Reticula
+config.client.rendering.enableReticleShaders.property.tooltip=Ativar Shaders de Reticula
+config.client.rendering.enableHDRFramebuffer.property.name=Ativar HDR Framebuffer
+config.client.rendering.enableHDRFramebuffer.property.tooltip=Ativar HDR Framebuffer
+config.client.rendering.enableScopeEffects.property.name=Ativar Efeitos de Mira
+config.client.rendering.enableScopeEffects.property.tooltip=Ativar Efeitos de Mira
+config.client.rendering.screenshaders.bloomEffect.property.name=Ativar Bloom
+config.client.rendering.screenshaders.bloomEffect.property.tooltip=Ativar Bloom
+config.client.rendering.screenshaders.filmGrain.property.name=Ativar Granulado de Filme
+config.client.rendering.screenshaders.filmGrain.property.tooltip=Ativar Granulado de Filme
+config.client.rendering.screenshaders.filmGrainIntensity.property.name=Intensidade do Granulado de Filme
+config.client.rendering.screenshaders.filmGrainIntensity.property.tooltip=Intensidade do Granulado de Filme
+config.client.rendering.screenshaders.bloomLayers.property.name=Quantidade de Camadas do Efeito Bloom
+config.client.rendering.screenshaders.bloomLayers.property.tooltip=Quantidade de Camadas do Efeito Bloom
+config.client.rendering.enableFancyRainAndSnow.property.name=Chuve e Neve na Tela
+config.client.rendering.enableFancyRainAndSnow.property.tooltip=Por favor mantenha esta configuração DESATIVADA isso está quebrado.
 
 overlay.opendoor.name=Abrir Porta
