--- a/src/main/resources/assets/mwc/lang/tr_TR.lang
+++ b/src/main/resources/assets/mwc/lang/tr_TR.lang
@@ -1059,40 +1059,40 @@ gui.currentZoom=Yakınlaştırma: %s%%
 gui.coolingDown=Soğuma...
 
 config.category.ores.name=Madencilik Ayarları
-config.ores.sulfurSpawnsPerChunk.property.name=Chunk Başına Sulfur Cevheri
-config.ores.sulfurSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Sulfur Cevheri miktarı.
-config.ores.copperSpawnsPerChunk.property.name=Chunk Başına Bakır Cevheri
-config.ores.copperSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Bakır Cevheri miktarı.
-config.ores.tinSpawnsPerChunk.property.name=Chunk Başına Kalay Cevheri
-config.ores.tinSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Kalay Cevheri miktarı.
-config.ores.leadSpawnsPerChunk.property.name=Chunk Başına Kurşun Cevheri
-config.ores.leadSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Kurşun Cevheri miktarı.
-config.ores.graphiteSpawnsPerChunk.property.name=Chunk Başına Grafit Cevheri
-config.ores.graphiteSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Grafit Cevheri miktarı.
+config.server.ores.sulfurSpawnsPerChunk.property.name=Chunk Başına Sulfur Cevheri
+config.server.ores.sulfurSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Sulfur Cevheri miktarı.
+config.server.ores.copperSpawnsPerChunk.property.name=Chunk Başına Bakır Cevheri
+config.server.ores.copperSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Bakır Cevheri miktarı.
+config.server.ores.tinSpawnsPerChunk.property.name=Chunk Başına Kalay Cevheri
+config.server.ores.tinSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Kalay Cevheri miktarı.
+config.server.ores.leadSpawnsPerChunk.property.name=Chunk Başına Kurşun Cevheri
+config.server.ores.leadSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Kurşun Cevheri miktarı.
+config.server.ores.graphiteSpawnsPerChunk.property.name=Chunk Başına Grafit Cevheri
+config.server.ores.graphiteSpawnsPerChunk.property.tooltip=Her bir chunk başına düşen Grafit Cevheri miktarı.
 
 config.category.gameplay.name=Oyun Oynanış Ayarları
-config.gameplay.enableAmmoCounter.property.name=Mermi Sayacı
-config.gameplay.enableAmmoCounter.property.tooltip=Mermi sayacını etkinleştir/devre dışı bırak
-config.gameplay.enableOpenDoorDisplay.property.name=Kapıyı Açma Ekranı
-config.gameplay.enableOpenDoorDisplay.property.tooltip=Kapıyı açma ekranını etkinleştir/devre dışı bırak
-config.gameplay.holdToAim.property.name=Nişan Almak İçin Basılı Tut
-config.gameplay.holdToAim.property.tooltip=Nişan almak için basılı tutma özelliğini etkinleştir/devre dışı bırak
-config.gameplay.enableAmmoCounterBackground.property.name=Mermi Sayacı Arka Planı
-config.gameplay.enableAmmoCounterBackground.property.tooltip=Mermi sayacı için arka planı etkinleştir/devre dışı bırak
-config.gameplay.enableBleedingOnHit.property.name=Vurulduğunda Kanama
-config.gameplay.enableBleedingOnHit.property.tooltip=Vurulduğunda kanama özelliğini etkinleştir/devre dışı bırak
-config.gameplay.bulletBreakGlass.property.name=Mermiyle Camı Kırma
-config.gameplay.bulletBreakGlass.property.tooltip=Mermilerin camı kırmasını etkinleştir/devre dışı bırak
-config.gameplay.enableMuzzleEffects.property.name=Ateş Çıkış Efektleri
-config.gameplay.enableMuzzleEffects.property.tooltip=Ateş çıkış efektlerini etkinleştir/devre dışı bırak
-config.gameplay.enableBlurOnAim.property.name=Nişan Alırken Bulanıklık
-config.gameplay.enableBlurOnAim.property.tooltip=Nişan alırken bulanıklığı etkinleştir/devre dışı bırak
-config.gameplay.explosionDamage.property.name=Patlama Hasarı
-config.gameplay.explosionDamage.property.tooltip=Patlama hasarını özelleştir
-config.gameplay.explodedBlockDropChance.property.name=Patlatılan Bloğun Düşme Şansı
-config.gameplay.explodedBlockDropChance.property.tooltip=Bir bloğun patladığında düşme şansını belirle
-config.gameplay.statusBarPosition.property.name=Durum Çubuğu Konumu
-config.gameplay.statusBarPosition.property.tooltip=Durum çubuğunun ekran üzerindeki konumunu belirle
+config.client.ammocounter.enableAmmoCounter.property.name=Mermi Sayacı
+config.client.ammocounter.enableAmmoCounter.property.tooltip=Mermi sayacını etkinleştir/devre dışı bırak
+config.client.enableOpenDoorDisplay.property.name=Kapıyı Açma Ekranı
+config.client.enableOpenDoorDisplay.property.tooltip=Kapıyı açma ekranını etkinleştir/devre dışı bırak
+config.client.holdToAim.property.name=Nişan Almak İçin Basılı Tut
+config.client.holdToAim.property.tooltip=Nişan almak için basılı tutma özelliğini etkinleştir/devre dışı bırak
+config.client.ammocounter.enableAmmoCounterBackground.property.name=Mermi Sayacı Arka Planı
+config.client.ammocounter.enableAmmoCounterBackground.property.tooltip=Mermi sayacı için arka planı etkinleştir/devre dışı bırak
+config.server.enableBleedingOnHit.property.name=Vurulduğunda Kanama
+config.server.enableBleedingOnHit.property.tooltip=Vurulduğunda kanama özelliğini etkinleştir/devre dışı bırak
+config.server.bulletBreakGlass.property.name=Mermiyle Camı Kırma
+config.server.bulletBreakGlass.property.tooltip=Mermilerin camı kırmasını etkinleştir/devre dışı bırak
+config.client.enableMuzzleEffects.property.name=Ateş Çıkış Efektleri
+config.client.enableMuzzleEffects.property.tooltip=Ateş çıkış efektlerini etkinleştir/devre dışı bırak
+config.client.enableBlurOnAim.property.name=Nişan Alırken Bulanıklık
+config.client.enableBlurOnAim.property.tooltip=Nişan alırken bulanıklığı etkinleştir/devre dışı bırak
+config.server.explosionDamage.property.name=Patlama Hasarı
+config.server.explosionDamage.property.tooltip=Patlama hasarını özelleştir
+config.server.explodedBlockDropChance.property.name=Patlatılan Bloğun Düşme Şansı
+config.server.explodedBlockDropChance.property.tooltip=Bir bloğun patladığında düşme şansını belirle
+config.client.statusBarPosition.property.name=Durum Çubuğu Konumu
+config.client.statusBarPosition.property.tooltip=Durum çubuğunun ekran üzerindeki konumunu belirle
 
 config.category.entities.name=Varlıklar Ayarları
 
@@ -1101,31 +1101,31 @@ config.category.rendering.name=Renderleme
 config.category.rendering.tooltip=Renderleme/Gölgeleme
 config.category.screenshaders.name=Ekran Gölgelemeleri
 config.category.screenshaders.tooltip=Ekran Gölgelemeleri
-config.rendering.enableAllShaders.property.name=Tüm Gölgelemeleri Etkinleştir
-config.rendering.enableAllShaders.property.tooltip=Tüm Gölgelemeleri Etkinleştir
-config.rendering.enableScreenShaders.property.name=Ekran Gölgelemelerini Devre Dışı Bırak
-config.rendering.enableScreenShaders.property.tooltip=Ekran Gölgelemelerini Devre Dışı Bırak
-config.rendering.enableWorldShaders.property.name=Dünya Gölgelemelerini Devre Dışı Bırak
-config.rendering.enableWorldShaders.property.tooltip=Dünya Gölgelemelerini Devre Dışı Bırak
-config.rendering.enableGunShaders.property.name=Silah Gölgelemelerini Etkinleştir
-config.rendering.enableGunShaders.property.tooltip=Silah Gölgelemelerini Etkinleştir
-config.rendering.enableFlashShaders.property.name=Flaş Gölgelemelerini Etkinleştir
-config.rendering.enableFlashShaders.property.tooltip=Flaş Gölgelemelerini Etkinleştir
-config.rendering.enableReticleShaders.property.name=Retikül Gölgelemelerini Etkinleştir
-config.rendering.enableReticleShaders.property.tooltip=Retikül Gölgelemelerini Etkinleştir
-config.rendering.enableHDRFramebuffer.property.name=HDR Framebuffer'ı Etkinleştir
-config.rendering.enableHDRFramebuffer.property.tooltip=HDR Framebuffer'ı Etkinleştir
-config.rendering.enableScopeEffects.property.name=Dürbün Efektlerini Etkinleştir
-config.rendering.enableScopeEffects.property.tooltip=Dürbün Efektlerini Etkinleştir
-config.rendering.screenshaders.bloomEffect.property.name=Bloom'u Etkinleştir
-config.rendering.screenshaders.bloomEffect.property.tooltip=Bloom'u Etkinleştir
-config.rendering.screenshaders.filmGrain.property.name=Film Tanelerini Etkinleştir
-config.rendering.screenshaders.filmGrain.property.tooltip=Film Tanelerini Etkinleştir
-config.rendering.screenshaders.filmGrainIntensity.property.name=Film Taneleri Yoğunluğu
-config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Taneleri Yoğunluğu
-config.rendering.screenshaders.bloomLayers.property.name=Bloom Katman Sayısı
-config.rendering.screenshaders.bloomLayers.property.tooltip=Bloom Katman Sayısı
-config.rendering.enableFancyRainAndSnow.property.name=Ekran Üzerindeki Yağmur ve Kar
-config.rendering.enableFancyRainAndSnow.property.tooltip=Lütfen bu ayarı DEVRE DIŞI bırakın çünkü şu anda çalışmıyor.
+config.client.rendering.enableAllShaders.property.name=Tüm Gölgelemeleri Etkinleştir
+config.client.rendering.enableAllShaders.property.tooltip=Tüm Gölgelemeleri Etkinleştir
+config.client.rendering.enableScreenShaders.property.name=Ekran Gölgelemelerini Devre Dışı Bırak
+config.client.rendering.enableScreenShaders.property.tooltip=Ekran Gölgelemelerini Devre Dışı Bırak
+config.client.rendering.enableWorldShaders.property.name=Dünya Gölgelemelerini Devre Dışı Bırak
+config.client.rendering.enableWorldShaders.property.tooltip=Dünya Gölgelemelerini Devre Dışı Bırak
+config.client.rendering.enableGunShaders.property.name=Silah Gölgelemelerini Etkinleştir
+config.client.rendering.enableGunShaders.property.tooltip=Silah Gölgelemelerini Etkinleştir
+config.client.rendering.enableFlashShaders.property.name=Flaş Gölgelemelerini Etkinleştir
+config.client.rendering.enableFlashShaders.property.tooltip=Flaş Gölgelemelerini Etkinleştir
+config.client.rendering.enableReticleShaders.property.name=Retikül Gölgelemelerini Etkinleştir
+config.client.rendering.enableReticleShaders.property.tooltip=Retikül Gölgelemelerini Etkinleştir
+config.client.rendering.enableHDRFramebuffer.property.name=HDR Framebuffer'ı Etkinleştir
+config.client.rendering.enableHDRFramebuffer.property.tooltip=HDR Framebuffer'ı Etkinleştir
+config.client.rendering.enableScopeEffects.property.name=Dürbün Efektlerini Etkinleştir
+config.client.rendering.enableScopeEffects.property.tooltip=Dürbün Efektlerini Etkinleştir
+config.client.rendering.screenshaders.bloomEffect.property.name=Bloom'u Etkinleştir
+config.client.rendering.screenshaders.bloomEffect.property.tooltip=Bloom'u Etkinleştir
+config.client.rendering.screenshaders.filmGrain.property.name=Film Tanelerini Etkinleştir
+config.client.rendering.screenshaders.filmGrain.property.tooltip=Film Tanelerini Etkinleştir
+config.client.rendering.screenshaders.filmGrainIntensity.property.name=Film Taneleri Yoğunluğu
+config.client.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Taneleri Yoğunluğu
+config.client.rendering.screenshaders.bloomLayers.property.name=Bloom Katman Sayısı
+config.client.rendering.screenshaders.bloomLayers.property.tooltip=Bloom Katman Sayısı
+config.client.rendering.enableFancyRainAndSnow.property.name=Ekran Üzerindeki Yağmur ve Kar
+config.client.rendering.enableFancyRainAndSnow.property.tooltip=Lütfen bu ayarı DEVRE DIŞI bırakın çünkü şu anda çalışmıyor.
 
 overlay.opendoor.name=Kapıyı Aç
