--- a/src/main/resources/assets/mwc/lang/uk_UA.lang
+++ b/src/main/resources/assets/mwc/lang/uk_UA.lang
@@ -1069,47 +1069,47 @@ gui.grenadeExplodes=Вибух через %s секунд
 gui.coolingDown=Охолодження...
 
 config.category.ores.name=Ores
-config.ores.sulfurSpawnsPerChunk.property.name=Сірчана руда в чанку
-config.ores.sulfurSpawnsPerChunk.property.tooltip=Кількість сірчаної руди, з'явленої в чанку.
-config.ores.copperSpawnsPerChunk.property.name=	Мідна руда в чанку
-config.ores.copperSpawnsPerChunk.property.tooltip=Кількусть мідної руди, з'явленої в чанку.
-config.ores.tinSpawnsPerChunk.property.name=Олов'яна руда в чанку
-config.ores.tinSpawnsPerChunk.property.tooltip=Кількість олов'яної руди, з'явленої в чанку.
-config.ores.leadSpawnsPerChunk.property.name=Свинцева руда в чанку
-config.ores.leadSpawnsPerChunk.property.tooltip=Кількість свинцевої руди, з'явленої в чанку.
-config.ores.graphiteSpawnsPerChunk.property.name=Графітова руда в чанку
-config.ores.graphiteSpawnsPerChunk.property.tooltip=Кількість графітової руди, з'явленої в чанку.
+config.server.ores.sulfurSpawnsPerChunk.property.name=Сірчана руда в чанку
+config.server.ores.sulfurSpawnsPerChunk.property.tooltip=Кількість сірчаної руди, з'явленої в чанку.
+config.server.ores.copperSpawnsPerChunk.property.name=	Мідна руда в чанку
+config.server.ores.copperSpawnsPerChunk.property.tooltip=Кількусть мідної руди, з'явленої в чанку.
+config.server.ores.tinSpawnsPerChunk.property.name=Олов'яна руда в чанку
+config.server.ores.tinSpawnsPerChunk.property.tooltip=Кількість олов'яної руди, з'явленої в чанку.
+config.server.ores.leadSpawnsPerChunk.property.name=Свинцева руда в чанку
+config.server.ores.leadSpawnsPerChunk.property.tooltip=Кількість свинцевої руди, з'явленої в чанку.
+config.server.ores.graphiteSpawnsPerChunk.property.name=Графітова руда в чанку
+config.server.ores.graphiteSpawnsPerChunk.property.tooltip=Кількість графітової руди, з'явленої в чанку.
 
 config.category.gameplay.name=Gameplay
-config.gameplay.enableAmmoCounter.property.name=Лічильник патронів
-config.gameplay.enableAmmoCounter.property.tooltip=Увімк./Вимк. Лічильник патронів
-config.gameplay.ammoCounterX.property.name=Лічильник патронів X
-config.gameplay.ammoCounterY.property.name=Лічильник патронів Y
-config.gameplay.ammoCounterSize.property.name=Розмір лічильника патронів
-config.gameplay.enableOpenDoorDisplay.property.name=Дисплей відкритих дверей
-config.gameplay.enableAmmoCounterBackground.property.name=Фон лічильника патронів
-config.gameplay.enableAmmoCounterBackgroundReverse.property.name=Зворотний лічильник патронів
-config.gameplay.enableOpenDoorDisplay.property.tooltip=Увімк./Вимк. Дисплей відкритих дверей
-config.gameplay.holdToAim.property.name=Утримувати для прицілювання
-config.gameplay.holdToAim.property.tooltip=Увімк./Вимк. Утримувати для прицілювання
-config.gameplay.enableAmmoCounterBackground.property.tooltip=Увімк./Вимк. Фон для лічильника патронів
-config.gameplay.enableBleedingOnHit.property.name=Кровотеча при попаданні
-config.gameplay.enableBleedingOnHit.property.tooltip=Увімк./Вимк. Кровотеча при попаданні
-config.gameplay.bulletBreakGlass.property.name=Куля розбиває скло
-config.gameplay.bulletBreakGlass.property.tooltip=Увімк./Вимк. Куля розбиває скло
-config.gameplay.penetrableBlocks.property.name=Проникнення блоків
-config.gameplay.knockbackOnHit.property.name=Відштовхування при попаданні
-config.gameplay.enableMuzzleEffects.property.name=Вогнепальні ефекти
-config.gameplay.enableMuzzleEffects.property.tooltip=Увімк./Вимк. Вогнепальні ефекти
-config.gameplay.enableBlurOnAim.property.name=Розмиття при наведенні
-config.gameplay.enableBlurOnAim.property.tooltip=Увімк./Вимк. Розмиття при наведенні
-config.gameplay.explosionBreak.property.name=Руйнування від вибуху
-config.gameplay.explosionDamage.property.name=Пошкодження від вибуху
-config.gameplay.explosionDamage.property.tooltip=Налаштування пошкодження від вибуху
-config.gameplay.explodedBlockDropChance.property.name=Шанс випадіння блоків після вибуху
-config.gameplay.explodedBlockDropChance.property.tooltip=Шанс випадіння блоків під час вибуху
-config.gameplay.statusBarPosition.property.name=Положення панелі статусу
-config.gameplay.statusBarPosition.property.tooltip=Позиція на екрані для панелі статусу
+config.client.ammocounter.enableAmmoCounter.property.name=Лічильник патронів
+config.client.ammocounter.enableAmmoCounter.property.tooltip=Увімк./Вимк. Лічильник патронів
+config.client.ammocounter.ammoCounterX.property.name=Лічильник патронів X
+config.client.ammocounter.ammoCounterY.property.name=Лічильник патронів Y
+config.client.ammocounter.ammoCounterSize.property.name=Розмір лічильника патронів
+config.client.enableOpenDoorDisplay.property.name=Дисплей відкритих дверей
+config.client.ammocounter.enableAmmoCounterBackground.property.name=Фон лічильника патронів
+config.client.ammocounter.enableAmmoCounterBackgroundReverse.property.name=Зворотний лічильник патронів
+config.client.enableOpenDoorDisplay.property.tooltip=Увімк./Вимк. Дисплей відкритих дверей
+config.client.holdToAim.property.name=Утримувати для прицілювання
+config.client.holdToAim.property.tooltip=Увімк./Вимк. Утримувати для прицілювання
+config.client.ammocounter.enableAmmoCounterBackground.property.tooltip=Увімк./Вимк. Фон для лічильника патронів
+config.server.enableBleedingOnHit.property.name=Кровотеча при попаданні
+config.server.enableBleedingOnHit.property.tooltip=Увімк./Вимк. Кровотеча при попаданні
+config.server.bulletBreakGlass.property.name=Куля розбиває скло
+config.server.bulletBreakGlass.property.tooltip=Увімк./Вимк. Куля розбиває скло
+config.client.penetrableBlocks.property.name=Проникнення блоків
+config.client.knockbackOnHit.property.name=Відштовхування при попаданні
+config.client.enableMuzzleEffects.property.name=Вогнепальні ефекти
+config.client.enableMuzzleEffects.property.tooltip=Увімк./Вимк. Вогнепальні ефекти
+config.client.enableBlurOnAim.property.name=Розмиття при наведенні
+config.client.enableBlurOnAim.property.tooltip=Увімк./Вимк. Розмиття при наведенні
+config.client.explosionBreak.property.name=Руйнування від вибуху
+config.server.explosionDamage.property.name=Пошкодження від вибуху
+config.server.explosionDamage.property.tooltip=Налаштування пошкодження від вибуху
+config.server.explodedBlockDropChance.property.name=Шанс випадіння блоків після вибуху
+config.server.explodedBlockDropChance.property.tooltip=Шанс випадіння блоків під час вибуху
+config.client.statusBarPosition.property.name=Положення панелі статусу
+config.client.statusBarPosition.property.tooltip=Позиція на екрані для панелі статусу
 
 config.category.entities.name=Entities
 config.entities.terroristHealth.property.name=Здоров'я терориста
@@ -1122,34 +1122,34 @@ config.category.rendering.name=Rendering
 config.category.rendering.tooltip=Rendering/Shaders
 config.category.screenshaders.name=Screen Shaders
 config.category.screenshaders.tooltip=Screen Shaders
-config.rendering.enableAllShaders.property.name=Увімкнути всі шейдери
-config.rendering.enableAllShaders.property.tooltip=Увімкнути всі шейдери
-config.rendering.enableScreenShaders.property.name=Увімкнути екранні шейдери
-config.rendering.enableScreenShaders.property.tooltip=Увімкнути екранні шейдери
-config.rendering.enableWorldShaders.property.name=Увімкнути шейдери світу
-config.rendering.enableWorldShaders.property.tooltip=Увімкнути шейдери світу
-config.rendering.enableGunShaders.property.name=Увімкнути шейдери для зброї
-config.rendering.enableGunShaders.property.tooltip=Увімкнути шейдери для зброї
-config.rendering.enableFlashShaders.property.name=Увімкнути шейдери для спалахів
-config.rendering.enableFlashShaders.property.tooltip=Увімкнути шейдери для спалахів
-config.rendering.enableReticleShaders.property.name=Увімкнути шейдери для прицілу
-config.rendering.enableReticleShaders.property.tooltip=Увімкнути шейдери для прицілу
-config.rendering.enableHDRFramebuffer.property.name=Увімкнути буфер високої динамічної зони
-config.rendering.enableHDRFramebuffer.property.tooltip=Увімкнути буфер високої динамічної зони
-config.rendering.enableScopeEffects.property.name=Увімкнути ефекти для прицілу
-config.rendering.enableScopeEffects.property.tooltip=Увімкнути ефекти для прицілу
-config.rendering.screenshaders.bloomEffect.property.name=Увімкнути ефект блиску
-config.rendering.screenshaders.bloomEffect.property.tooltip=Увімкнути ефект блиску
-config.rendering.screenshaders.filmGrain.property.name=Увімкнути зернистість плівки
-config.rendering.screenshaders.filmGrain.property.tooltip=Увімкнути зернистість плівки
-config.rendering.screenshaders.filmGrainIntensity.property.name=Інтенсивність зернистості плівки
-config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Інтенсивність зернистості плівки
-config.rendering.screenshaders.bloomLayers.property.name=Кількість шарів блиску
-config.rendering.screenshaders.bloomLayers.property.tooltip=Кількість шарів блиску
-config.rendering.screenshaders.onScreenRainAndSnow.property.name=Дощ і сніг на екрані
-config.rendering.screenshaders.onScreenRainAndSnow.property.tooltip=Додати ефект дощу і снігу на екран
-config.rendering.enableFancyRainAndSnow.property.name=Ефектні дощ і сніг
-config.rendering.enableFancyRainAndSnow.property.tooltip=Заміна стандартного відображення дощу і снігу в Minecraft на більш вишукану версію
+config.client.rendering.enableAllShaders.property.name=Увімкнути всі шейдери
+config.client.rendering.enableAllShaders.property.tooltip=Увімкнути всі шейдери
+config.client.rendering.enableScreenShaders.property.name=Увімкнути екранні шейдери
+config.client.rendering.enableScreenShaders.property.tooltip=Увімкнути екранні шейдери
+config.client.rendering.enableWorldShaders.property.name=Увімкнути шейдери світу
+config.client.rendering.enableWorldShaders.property.tooltip=Увімкнути шейдери світу
+config.client.rendering.enableGunShaders.property.name=Увімкнути шейдери для зброї
+config.client.rendering.enableGunShaders.property.tooltip=Увімкнути шейдери для зброї
+config.client.rendering.enableFlashShaders.property.name=Увімкнути шейдери для спалахів
+config.client.rendering.enableFlashShaders.property.tooltip=Увімкнути шейдери для спалахів
+config.client.rendering.enableReticleShaders.property.name=Увімкнути шейдери для прицілу
+config.client.rendering.enableReticleShaders.property.tooltip=Увімкнути шейдери для прицілу
+config.client.rendering.enableHDRFramebuffer.property.name=Увімкнути буфер високої динамічної зони
+config.client.rendering.enableHDRFramebuffer.property.tooltip=Увімкнути буфер високої динамічної зони
+config.client.rendering.enableScopeEffects.property.name=Увімкнути ефекти для прицілу
+config.client.rendering.enableScopeEffects.property.tooltip=Увімкнути ефекти для прицілу
+config.client.rendering.screenshaders.bloomEffect.property.name=Увімкнути ефект блиску
+config.client.rendering.screenshaders.bloomEffect.property.tooltip=Увімкнути ефект блиску
+config.client.rendering.screenshaders.filmGrain.property.name=Увімкнути зернистість плівки
+config.client.rendering.screenshaders.filmGrain.property.tooltip=Увімкнути зернистість плівки
+config.client.rendering.screenshaders.filmGrainIntensity.property.name=Інтенсивність зернистості плівки
+config.client.rendering.screenshaders.filmGrainIntensity.property.tooltip=Інтенсивність зернистості плівки
+config.client.rendering.screenshaders.bloomLayers.property.name=Кількість шарів блиску
+config.client.rendering.screenshaders.bloomLayers.property.tooltip=Кількість шарів блиску
+config.client.rendering.screenshaders.onScreenRainAndSnow.property.name=Дощ і сніг на екрані
+config.client.rendering.screenshaders.onScreenRainAndSnow.property.tooltip=Додати ефект дощу і снігу на екран
+config.client.rendering.enableFancyRainAndSnow.property.name=Ефектні дощ і сніг
+config.client.rendering.enableFancyRainAndSnow.property.tooltip=Заміна стандартного відображення дощу і снігу в Minecraft на більш вишукану версію
 
 overlay.opendoor.name=Відкрити двері
 
