--- a/src/main/resources/assets/mwc/lang/ko_KR.lang
+++ b/src/main/resources/assets/mwc/lang/ko_KR.lang
@@ -1071,79 +1071,79 @@ gui.currentZoom=배율: %s%%
 gui.coolingDown=냉각 중...
 
 config.category.ores.name=광물
-config.ores.sulfurSpawnsPerChunk.property.name=청크당 황 광석
-config.ores.sulfurSpawnsPerChunk.property.tooltip=청크당 생성되는 황 광석의 양.
-config.ores.copperSpawnsPerChunk.property.name=청크당 구리 광석
-config.ores.copperSpawnsPerChunk.property.tooltip=청크당 생성되는 구리 광석의 양.
-config.ores.tinSpawnsPerChunk.property.name=청크당 주석 광석
-config.ores.tinSpawnsPerChunk.property.tooltip=청크당 생성되는 주석 광석의 양.
-config.ores.leadSpawnsPerChunk.property.name=청크당 납 광석
-config.ores.leadSpawnsPerChunk.property.tooltip=청크당 생성되는 납 광석의 양.
-config.ores.graphiteSpawnsPerChunk.property.name=청크당 흑연 광석
-config.ores.graphiteSpawnsPerChunk.property.tooltip=청크당 생성되는 흑연 광석의 양.
+config.server.ores.sulfurSpawnsPerChunk.property.name=청크당 황 광석
+config.server.ores.sulfurSpawnsPerChunk.property.tooltip=청크당 생성되는 황 광석의 양.
+config.server.ores.copperSpawnsPerChunk.property.name=청크당 구리 광석
+config.server.ores.copperSpawnsPerChunk.property.tooltip=청크당 생성되는 구리 광석의 양.
+config.server.ores.tinSpawnsPerChunk.property.name=청크당 주석 광석
+config.server.ores.tinSpawnsPerChunk.property.tooltip=청크당 생성되는 주석 광석의 양.
+config.server.ores.leadSpawnsPerChunk.property.name=청크당 납 광석
+config.server.ores.leadSpawnsPerChunk.property.tooltip=청크당 생성되는 납 광석의 양.
+config.server.ores.graphiteSpawnsPerChunk.property.name=청크당 흑연 광석
+config.server.ores.graphiteSpawnsPerChunk.property.tooltip=청크당 생성되는 흑연 광석의 양.
 
 config.category.gameplay.name=게임플레이
-config.gameplay.enableAmmoCounter.property.name=탄약 수
-config.gameplay.enableAmmoCounter.property.tooltip=탄약 수를 켜고 끕니다.
-config.gameplay.ammoCounterX.property.name=탄약 수 X
-config.gameplay.ammoCounterY.property.name=탄약 수 Y
-config.gameplay.ammoCounterSize.property.name=탄약 수 크기
-config.gameplay.enableOpenDoorDisplay.property.name=Open Door Display
-config.gameplay.enableAmmoCounterBackground.property.name=Ammo Counter Background
-config.gameplay.enableAmmoCounterBackgroundReverse.property.name=Ammo Counter Reverse
-config.gameplay.enableOpenDoorDisplay.property.tooltip=Enable/Disable the Open Door Display
-config.gameplay.holdToAim.property.name=Hold To Aim
-config.gameplay.holdToAim.property.tooltip=Enable/Disable hold to aim
-config.gameplay.enableAmmoCounterBackground.property.tooltip=Enable/Disable the background for Ammo Counter
-config.gameplay.enableBleedingOnHit.property.name=맞았을 시 출혈
-config.gameplay.enableBleedingOnHit.property.tooltip=맞앚을 시 출혈을 켜고 끕니다.
-config.gameplay.bulletBreakGlass.property.name=총알로 유리 깨트리기
-config.gameplay.bulletBreakGlass.property.tooltip=총알로 유리 깨트리기를 켜고 끕니다.
-config.gameplay.penetrableBlocks.property.name=블록 관통
-config.gameplay.knockbackOnHit.property.name=맞았을 시 넉백
-config.gameplay.enableMuzzleEffects.property.name=총구 효과
-config.gameplay.enableMuzzleEffects.property.tooltip=총구 효과를 켜고 끕니다.
-config.gameplay.enableBlurOnAim.property.name=조준할 때 흐림 처리
-config.gameplay.enableBlurOnAim.property.tooltip=조준할 때 흐림 처리를 켜고 끕니다.
-config.gameplay.explosionBreak.property.name=폭발 파괴
-config.gameplay.explosionDamage.property.name=폭발 피해
-config.gameplay.explosionDamage.property.tooltip=Customize the explosion damage
-config.gameplay.explodedBlockDropChance.property.name=Exploded Block Drop Chance
-config.gameplay.explodedBlockDropChance.property.tooltip=The chance for blocks to drop when exploded
-config.gameplay.statusBarPosition.property.name=Status Bar Position
-config.gameplay.statusBarPosition.property.tooltip=The screen position for the Status Bar
+config.client.ammocounter.enableAmmoCounter.property.name=탄약 수
+config.client.ammocounter.enableAmmoCounter.property.tooltip=탄약 수를 켜고 끕니다.
+config.client.ammocounter.ammoCounterX.property.name=탄약 수 X
+config.client.ammocounter.ammoCounterY.property.name=탄약 수 Y
+config.client.ammocounter.ammoCounterSize.property.name=탄약 수 크기
+config.client.enableOpenDoorDisplay.property.name=Open Door Display
+config.client.ammocounter.enableAmmoCounterBackground.property.name=Ammo Counter Background
+config.client.ammocounter.enableAmmoCounterBackgroundReverse.property.name=Ammo Counter Reverse
+config.client.enableOpenDoorDisplay.property.tooltip=Enable/Disable the Open Door Display
+config.client.holdToAim.property.name=Hold To Aim
+config.client.holdToAim.property.tooltip=Enable/Disable hold to aim
+config.client.ammocounter.enableAmmoCounterBackground.property.tooltip=Enable/Disable the background for Ammo Counter
+config.server.enableBleedingOnHit.property.name=맞았을 시 출혈
+config.server.enableBleedingOnHit.property.tooltip=맞앚을 시 출혈을 켜고 끕니다.
+config.server.bulletBreakGlass.property.name=총알로 유리 깨트리기
+config.server.bulletBreakGlass.property.tooltip=총알로 유리 깨트리기를 켜고 끕니다.
+config.client.penetrableBlocks.property.name=블록 관통
+config.client.knockbackOnHit.property.name=맞았을 시 넉백
+config.client.enableMuzzleEffects.property.name=총구 효과
+config.client.enableMuzzleEffects.property.tooltip=총구 효과를 켜고 끕니다.
+config.client.enableBlurOnAim.property.name=조준할 때 흐림 처리
+config.client.enableBlurOnAim.property.tooltip=조준할 때 흐림 처리를 켜고 끕니다.
+config.client.explosionBreak.property.name=폭발 파괴
+config.server.explosionDamage.property.name=폭발 피해
+config.server.explosionDamage.property.tooltip=Customize the explosion damage
+config.server.explodedBlockDropChance.property.name=Exploded Block Drop Chance
+config.server.explodedBlockDropChance.property.tooltip=The chance for blocks to drop when exploded
+config.client.statusBarPosition.property.name=Status Bar Position
+config.client.statusBarPosition.property.tooltip=The screen position for the Status Bar
 
 config.category.entities.name=엔티티
 config.category.rendering.name=렌더링
 config.category.rendering.tooltip=렌더링/셰이더
 config.category.screenshaders.name=Screen Shaders
 config.category.screenshaders.tooltip=Screen Shaders
-config.rendering.enableAllShaders.property.name=Enable All Shaders
-config.rendering.enableAllShaders.property.tooltip=Enable All Shaders
-config.rendering.enableScreenShaders.property.name=Disable Screen Shaders
-config.rendering.enableScreenShaders.property.tooltip=Disable Screen Shaders
-config.rendering.enableWorldShaders.property.name=Disable World Shaders
-config.rendering.enableWorldShaders.property.tooltip=Disable World Shaders
-config.rendering.enableGunShaders.property.name=Enable Gun Shaders
-config.rendering.enableGunShaders.property.tooltip=Enable Gun Shaders
-config.rendering.enableFlashShaders.property.name=Enable Flash Shaders
-config.rendering.enableFlashShaders.property.tooltip=Enable Flash Shaders
-config.rendering.enableReticleShaders.property.name=Enable Reticle Shaders
-config.rendering.enableReticleShaders.property.tooltip=Enable Reticle Shaders
-config.rendering.enableHDRFramebuffer.property.name=Enable HDR Framebuffer
-config.rendering.enableHDRFramebuffer.property.tooltip=Enable HDR Framebuffer
-config.rendering.enableScopeEffects.property.name=Enable Scope Effects
-config.rendering.enableScopeEffects.property.tooltip=Enable Scope Effects
-config.rendering.screenshaders.bloomEffect.property.name=Enable Bloom
-config.rendering.screenshaders.bloomEffect.property.tooltip=Enable Bloom
-config.rendering.screenshaders.filmGrain.property.name=Enable Film Grain
-config.rendering.screenshaders.filmGrain.property.tooltip=Enable Film Grain
-config.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensity
-config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensity
-config.rendering.screenshaders.bloomLayers.property.name=Amount of Bloom Layers
-config.rendering.screenshaders.bloomLayers.property.tooltip=Amount of Bloom Layers
-config.rendering.enableFancyRainAndSnow.property.name=온스크린 비와 눈
-config.rendering.enableFancyRainAndSnow.property.tooltip=이 설정은 작동하지 않으므로 비활성화로 유지하십시오.
+config.client.rendering.enableAllShaders.property.name=Enable All Shaders
+config.client.rendering.enableAllShaders.property.tooltip=Enable All Shaders
+config.client.rendering.enableScreenShaders.property.name=Disable Screen Shaders
+config.client.rendering.enableScreenShaders.property.tooltip=Disable Screen Shaders
+config.client.rendering.enableWorldShaders.property.name=Disable World Shaders
+config.client.rendering.enableWorldShaders.property.tooltip=Disable World Shaders
+config.client.rendering.enableGunShaders.property.name=Enable Gun Shaders
+config.client.rendering.enableGunShaders.property.tooltip=Enable Gun Shaders
+config.client.rendering.enableFlashShaders.property.name=Enable Flash Shaders
+config.client.rendering.enableFlashShaders.property.tooltip=Enable Flash Shaders
+config.client.rendering.enableReticleShaders.property.name=Enable Reticle Shaders
+config.client.rendering.enableReticleShaders.property.tooltip=Enable Reticle Shaders
+config.client.rendering.enableHDRFramebuffer.property.name=Enable HDR Framebuffer
+config.client.rendering.enableHDRFramebuffer.property.tooltip=Enable HDR Framebuffer
+config.client.rendering.enableScopeEffects.property.name=Enable Scope Effects
+config.client.rendering.enableScopeEffects.property.tooltip=Enable Scope Effects
+config.client.rendering.screenshaders.bloomEffect.property.name=Enable Bloom
+config.client.rendering.screenshaders.bloomEffect.property.tooltip=Enable Bloom
+config.client.rendering.screenshaders.filmGrain.property.name=Enable Film Grain
+config.client.rendering.screenshaders.filmGrain.property.tooltip=Enable Film Grain
+config.client.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensity
+config.client.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensity
+config.client.rendering.screenshaders.bloomLayers.property.name=Amount of Bloom Layers
+config.client.rendering.screenshaders.bloomLayers.property.tooltip=Amount of Bloom Layers
+config.client.rendering.enableFancyRainAndSnow.property.name=온스크린 비와 눈
+config.client.rendering.enableFancyRainAndSnow.property.tooltip=이 설정은 작동하지 않으므로 비활성화로 유지하십시오.
 
 overlay.opendoor.name=문 열기
 
